--- a/localisation/english/MD_focus_TAI_l_english.yml
+++ b/localisation/english/MD_focus_TAI_l_english.yml
@@ -66,3 +66,5 @@ TAI_taipower1: "Taipower"
 TAI_taipower2: "Taipower"
 TAI_taipower3: "Taipower"
 TAI_taipower4: "Taipower"
+TAI_improved_building_tech: "Uniqe Construction Technique"
+TAI_improved_building_tech_desc: "Because we are on an island, we have to fortify our buildings against external natural factors, but this slows down the build speed a bit."
