Chinese Focuses Requirements Fix

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -96,6 +96,8 @@ Achievements:
   - Fixed the Tuareg State not having any techs when released
   - Fixed a influence bug where you could spread influence and gain influence at the same time with the auto influence report off
   - Fixed the missing parent class for the Futuristic Integrated Missile Radar Control for MTG ships
+  - Fixed that Chinese Focus "End US Hegemony" requirements cannot be properly met
+  - Fixed that Chinese Focus "Support Negotiations" Requirements cannot be properly met after Taliban's defeat
 
  Content:
   - New building "Commercialized Agriculture District"
