--- a/localisation/english/MD_focus_African_Union_l_english.yml
+++ b/localisation/english/MD_focus_African_Union_l_english.yml
@@ -186,7 +186,7 @@
  AFRICAN_UNION_shared_focus_unite_africa: "Unite Africa"
  AFRICAN_UNION_shared_focus_unite_africa_desc: "The time has come! We must now unite Africa into a single country and propel the continent to a future nobody could have dreamed of"
  AFRICAN_UNION_shared_focus_unite_africa_trigger_tt: "No §YMember State§! is at war"
- AFRICAN_UNION_shared_focus_unite_africa_tt: "\n§YEvery member state will be invited to join a unified Africa§!\n\n§GCountries are more likely to accept if:\n- They have the same §YOutlook§!\n- Their opinion of us is higher than §Y+50§!\n\n§!§RCountries are less likely to accept if\n- They are §YWestern§! and we are §YEmerging§!, or vice-versa\n- They are §YSalafist§! or §YNationalist§!, and we are not\n- Their opinion of us is lower than §Y-50§!§!\n\n§YThe likelihood of accepting will also be impacted by previous focus choices§!"
+ AFRICAN_UNION_shared_focus_unite_africa_tt: "\n§YEvery member state will be invited to join a unified Africa§!\n\n§GCountries are more likely to accept if:\n- They have the same §YOutlook§!\n- Their opinion of us is higher than §Y+50§!§!\n\n§RCountries are less likely to accept if:\n- They are §YWestern§! and we are §YEmerging§!, or vice-versa\n- They are §YSalafist§! or §YNationalist§!, and we are not\n- Their opinion of us is lower than §Y-50§!§!\n\n§YThe likelihood of accepting will also be impacted by previous focus choices§!"
 
  #Decisions
  african_union_decisions_category: "The African Union"
