--- a/localisation/english/MD_focus_TIE_l_english.yml
+++ b/localisation/english/MD_focus_TIE_l_english.yml
@@ -78,8 +78,8 @@
  TIE_rely_on_clan_elders_desc: "Rather than appointing a single figure or group to control the lives of the clan members, the judicial authority should rest on the shoulders of clan elders. For centuries they have been handling issues and matters that rise between the clans. They now our traditions best, and they are best choice for upholding them."
  TIE_continue_as_herders: "Continue As Herders"
  TIE_continue_as_herders_desc: "Our people have been herders for centuries. We should not force people change their lifestyles just to suit the government's needs."
- TIE_share_oases: "Share Oases"
- TIE_share_oases_desc: "All resources are shared between the clans. We should do a survey of oases, wells and pastures and redistribute them if we see inequality between any two clans. This will strengthen our people's belief that the clan system works."
+ TIE_share_oasis: "Share Oasis"
+ TIE_share_oasis_desc: "All resources are shared between the clans. We should do a survey of oasis, wells and pastures and redistribute them if we see inequality between any two clans. This will strengthen our people's belief that the clan system works."
  TIE_use_azza_to_industrialise: "Use The Azza To Industrialise"
  TIE_use_azza_to_industrialise_desc: "The Toubou society is socially stratified into a caste system. The people who work instead of owning land and herding are called the Azza. These people do artisanal work, mining, metal work and tailoring, and have traditionally been despised and segregated by the higher caste of 'freemen' of the Toubou society. We should not despise these people, but instead use them to create actual industry for the Toubou people."
  TIE_adopt_cfa_franc: "Adopt CFA Franc"
