--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -1113,7 +1113,7 @@
  LBA_reconcile_with_chad_desc: "It is childish for us to hold on to grudges from decades ago. We should reconcile with Chad and together we can work for the stability of the region."
  LBA_reclaim_aouzou_strip: "Reclaim The Aouzou Strip"
  LBA_reclaim_aouzou_strip_desc: "The Aouzou Strip is a piece of land the Italians ceded from their Libyan colony to the French. We tried to take back the area in the 80s but were defeated by Chad. While the region is poor and sparsely populated, it is still a matter of pride. Also, there might be uranium in the region."
- LBA_reclaim_aouzou_strip_threat: "[LBA.GetNameDef] Claims The Aozou Strip"
+ LBA_reclaim_aouzou_strip_threat: "[LBA.GetNameDef] Claims The Aouzou Strip"
  LBA_strip_toubou_of_citizenship: "Strip The Toubou Of Citizenship"
  LBA_strip_toubou_of_citizenship_desc: "The Tobou aren't native to Libya. They are simply herders who have crossed the border from Chad onto our side. They have no place in Libya."
  LBA_strip_toubou_of_citizenship_tt: "§RBecause we have previously promised to protect minorities, Libyan tribes will be seriously offended!§!\n"
@@ -1126,16 +1126,16 @@
  LBA_demand_aouzou_desc: "The time has come for Chad to relinquish control of the Aouzou strip to us. If they refuse, we will not make the same mistakes we did in the Toyota War."
  LBA_demand_aouzou_threat: "[LBA.GetNameDef] Demanded the Aouzou Strip"
  LBA_demand_chads_submission: "Demand Chad's Submission"
- LBA_demand_chads_submission_desc: "While we managed to wrestle the Aozou Strip from Chad, there is no knowing what they are planning. They could be gathering allies as we speak to attack us and reclaim their land. We must demand that the hostile government of [CHA.GetLeader] steps down, and a government that can promise [ROOT.GetName] some security takes control of the country."
+ LBA_demand_chads_submission_desc: "While we managed to wrestle the Aouzou Strip from Chad, there is no knowing what they are planning. They could be gathering allies as we speak to attack us and reclaim their land. We must demand that the hostile government of [CHA.GetLeader] steps down, and a government that can promise [ROOT.GetName] some security takes control of the country."
  LBA_demand_chads_submission_tt: "[LBA.GetNameDef] Demanded [CHA.GetAdjective] Submission"
  LBA_invest_in_chadian_cotton: "Invest In Chadian Cotton"
  LBA_invest_in_chadian_cotton_desc: "One of Chad's main exports is cotton. We should invest in their cotton industry and setup a trade deal to import quality cotton straight into [ROOT.GetName]."
  LBA_invest_in_chadian_cotton_tt: "If [CHA.GetNameWithFlag] agrees, then\n"
- LBA_mining_in_aozou: "Mining In Aozou"
- LBA_mining_in_aozou_desc: "With the Aouzou strip secure, we can now start mining that sweet uranium from the ground."
+ LBA_mining_in_aouzou: "Mining In Aouzou"
+ LBA_mining_in_aouzou_desc: "With the Aouzou strip secure, we can now start mining that sweet uranium from the ground."
  libya_chad_uranium_deal_tt: "[CHA.GetNameWithFlag] has agreed to joint mining"
- LBA_mining_in_aozou_tt_1: "If we own §Y$STATE_580$§!:\n"
- LBA_mining_in_aozou_tt_2: "If [CHA.GetNameWithFlag] has agreed to joint mining:\n"
+ LBA_mining_in_aouzou_tt_1: "If we own §Y$STATE_580$§!:\n"
+ LBA_mining_in_aouzou_tt_2: "If [CHA.GetNameWithFlag] has agreed to joint mining:\n"
  LBA_humanitarian_aid_to_chad: "Humanitarian Aid To Chad"
  LBA_humanitarian_aid_to_chad_desc: "Chad has one of the lowest Human Development Indexes in the whole world. They have also never really recovered from their civil war in the 1980s, and there are still some existing rebel groups in the country. We should do a massive campaign of humanitarian aid to help the country develop."
  LBA_exploit_chadian_oil: "Exploit Chadian Oil"
@@ -1529,7 +1529,7 @@
  LibyaFocus.73.d: "The [FROM.GetAdjective] government has rejected our deal on joint mining"
  LibyaFocus.73.a: "Damn!"
  LibyaFocus.74.t: "[FROM.GetNameDef] Starts Uranium Mining"
- LibyaFocus.74.d: "[FROM.GetNameDef] has started mining uranium in the Aozou Strip. While most of the resources go to them, we also get a small share and the [FROM.GetAdjective] have agreed to cover all the costs of the excavation."
+ LibyaFocus.74.d: "[FROM.GetNameDef] has started mining uranium in the Aouzou Strip. While most of the resources go to them, we also get a small share and the [FROM.GetAdjective] have agreed to cover all the costs of the excavation."
  LibyaFocus.74.a: "Okay"
  LibyaFocus.75.t: "Toubou Rise Up"
  LibyaFocus.75.d: "As the [FROM.GeAdjective] forces started moving across the border, several groups of Toubou tribesmen took control of key buildings in some of the bigger towns in Northern Chad with the hopes of welcoming the [FROM.GetAdjective]s as their liberators. The tribesmen are poorly armed and few, but they will cause disruptions in the rear of our lines."
@@ -1614,7 +1614,7 @@
  LibyaFocus.97.d: "A council of Fezzan tribal leaders have announced that they no longer accept the state's authority over their land. According to them, the government has clearly shown that it does not have Fezzan's best interests in mind. Luckily, Fezzan is a very sparsely populated region and most likely it won't be a challenge for us to put them down. Can we let this happen?"
  LibyaFocus.97.a: "We need to destroy them"
  LibyaFocus.97.b: "There is nothing we can do right now"
- LibyaFocus.98.t: "[FROM.GetNameDef] Demands The Aozou Strip"
+ LibyaFocus.98.t: "[FROM.GetNameDef] Demands The Aouzou Strip"
  LibyaFocus.98.d: "The [FROM.GetAdjective] government is demanding that we return them the control of the Aouzou Strip. The truth is that the area was never theirs to begin with, and we already taught them a lesson in the Toyota War. Can we defeat them again?"
  LibyaFocus.98.a: "We are not in a condition to fight, surrender the land"
  LibyaFocus.98.b: "Chad bows to no one!"
@@ -2265,9 +2265,9 @@
  LibyaFocusNews.8.d: "The [FROM.GetAdjective] government has announced a peace conference regarding the status of Western Sahara. Morocco, Algeria, Mauritania and representatives from the POLISARIO Front have all been invited to the meeting. [FROM.GetLeader] has an ambitious goal of trying to find a solution to the frozen conflict."
  LibyaFocusNews.8.a: "Interesting"
  LibyaFocusNews.9.t: "[FROM.GetNameDef] Overrules ICJ Ruling"
- LibyaFocusNews.9.d: "After the end of the Toyota War between Libya and Chad in 1987, the International Court of Justice ruled that the disputed Aozou Strip area between the two countries was legally Chadian. After the ruling, Libya quickly retreated from the area. Now, the [FROM.GetAdjective] leader [FROM.GetLeader] has overruled the decision, stating that [FROM.GetNameDef] only followed the ruling under international threat and pressure. They have now laid claim to the territory once again."
+ LibyaFocusNews.9.d: "After the end of the Toyota War between Libya and Chad in 1987, the International Court of Justice ruled that the disputed Aouzou Strip area between the two countries was legally Chadian. After the ruling, Libya quickly retreated from the area. Now, the [FROM.GetAdjective] leader [FROM.GetLeader] has overruled the decision, stating that [FROM.GetNameDef] only followed the ruling under international threat and pressure. They have now laid claim to the territory once again."
  LibyaFocusNews.9.a: "Interesting"
- LibyaFocusNews.10.t: "[CHA.GetNameDef] Cedes Aozou Strip"
+ LibyaFocusNews.10.t: "[CHA.GetNameDef] Cedes Aouzou Strip"
  LibyaFocusNews.10.d: "Yesterday, the [LBA.GetAdjective] government sent an ultimatum to [CHA.GetNameDef]; Withdraw all forces from the Aouzou Strip and officially transfer the territory to [LBA.GetNameDef], or face a military intervention. In what was essentially a hopeless situation, [CHA.GetAdjective] government agreed to give the territory to [LBA.GetNameDef]."
  LibyaFocusNews.10.a: "Interesting"
  LibyaFocusNews.11.t: "[CHA.GetNameDef] Defies [LBA.GetAdjective] Demands"
