--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -94,7 +94,7 @@
  ukraine_maidan_west.13.a: "Let's Protect The Country!"
  ukraine_maidan_west.14.t: "Protests On The Maidan"
  ukraine_maidan_west.14.d: "The response was not long in coming, and the protests began to radicalize. People began to use Molotov cocktails, small arms and stones against the security forces."
- ukraine_maidan_west.14.a: "Ohh God"
+ ukraine_maidan_west.14.a: "Ohh God.."
  ukraine_maidan_west.15.t: "Attracting The Army"
  ukraine_maidan_west.15.d: "We will try to involve the army in the crackdown on protests."
  ukraine_maidan_west.15.a: "Ukrainian Armed Forces Will Save Ukraine."
@@ -148,7 +148,7 @@
  ukraine_maidan_east.6.a: "We've Avoided The Worst"
  ukraine_maidan_east.7.t: "Organization Of The Militia"
  ukraine_maidan_east.7.d: "Local protesters began to gather in militia units. This is literally leading to an armed rebellion"
- ukraine_maidan_east.7.a: "Oh,God"
+ ukraine_maidan_east.7.a: "Ohh God.."
  ukraine_maidan_east.8.t: "Start The Suppression"
  ukraine_maidan_east.8.d: "The situation is getting out of control in many regions of the south-east, it's time to take decisive action"
  ukraine_maidan_east.8.a: "We will go to Odessa"
@@ -168,13 +168,13 @@
  ukraine_maidan_east.12.a: "We made a mistake."
  ukraine_maidan_east.13.t: "Mutiny in Kharkov"
  ukraine_maidan_east.13.d: "The unpreparedness of our special services played a bad joke on us again, in Kharkov we were unable to suppress the rebellion and an armed uprising broke out there"
- ukraine_maidan_east.13.a: "How Many Are There?!"
+ ukraine_maidan_east.13.a: "How Many Are There?"
  ukraine_maidan_east.17.t: "The Donbass Rebellion"
  ukraine_maidan_east.17.d: "An armed uprising has begun in the Donetsk and Luhansk regions. The Berkut units proved to be very useful for the rebels to disarm some of the military units stationed there."
  ukraine_maidan_east.17.a: "Damn it!"
  ukraine_maidan_east.18.t: "The Odessa Mutiny"
  ukraine_maidan_east.18.d: "Berkut's defection to the rebels greatly inspired the separatists in Odessa, where they also announced the creation of a people's republic"
- ukraine_maidan_east.18.a: "How Many Are There?!"
+ ukraine_maidan_east.18.a: "How Many Are There?"
  ukraine_maidan_east.19.t: "Government is Losing Power"
  ukraine_maidan_east.19.d: "We made critical mistakes that led to a civil war, and our political opponents will use this to seize power."
  ukraine_maidan_east.19.a: "Come What May"
