--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -645,12 +645,12 @@
  UKR_party_regions_start_desc: "Yanukovych has taken power in the country into his own hands, it's time for the regions!"
  UKR_party_regions_inaguration: "Yanukovych's Inauguration"
  UKR_party_regions_inaguration_desc: "It is time for the inauguration of our new president"
- UKR_party_regions_decrease: "Decrease The Administration"
+ UKR_party_regions_decrease: "Decrease The Administration Staff"
  UKR_party_regions_decrease_desc: "We will reduce the number of employees of the state apparatus"
  UKR_party_regions_anti_corrupt: "National Anti-Corruption Committee"
  UKR_party_regions_anti_corrupt_desc: "We will create a new ministry, the national Anti-Corruption Committee, to combat corrupt officials in our country"
- UKR_party_regions_commitie_economic: "Comitte of Economic Reforms"
- UKR_party_regions_commitie_economic_desc: "We will also create another ministry, the Economic Reform Committee."
+ UKR_party_regions_committee_economic: "Committee of Economic Reforms"
+ UKR_party_regions_committee_economic_desc: "We will also create another ministry, the Economic Reform Committee."
  UKR_party_regions_unifed_window: "Unified Window Investments"
  UKR_party_regions_unifed_window_desc: "We will introduce new rules for investors in our country, which will make it easier for them to interact with our authorities"
  UKR_party_regions_decrease_agro: "Decrease Regulations On Agriculture"
@@ -667,7 +667,7 @@
  UKR_party_regions_stability_reform_desc: "We will assemble a loyal coalition of politicians, which we will call "Stability and Reforms", which will actively promote our projects and ideas"
  UKR_party_regions_stability_restricting_freedom_speech: "Restricting Freedom of Speech"
  UKR_party_regions_stability_restricting_freedom_speech_desc: "Freedom of speech ends where it begins to offend us"
- UKR_party_regions_stability_purge_opposition: "Trying to Purge Political Oposition"
+ UKR_party_regions_stability_purge_opposition: "Trying to Purge Political Opposition"
  UKR_party_regions_stability_purge_opposition_desc: "The opposition is too self-willed and undermines the institutions of power using its freedom, it's time to fix this"
  UKR_party_regions_lustration: "Lustration of The Governor's Corps And Security Agencies"
  UKR_party_regions_lustration_desc: "Lustration of disloyal and openly harmful to the state people in these structures has long been necessary"
@@ -675,12 +675,12 @@
  UKR_party_regions_agreement_opposition_desc: "We will try to establish relations with some part of the opposition, thereby dividing it"
  UKR_party_regions_appease_the_westermists: "Appease The Westermists"
  UKR_party_regions_appease_the_westermists_desc: "Western Ukraine has long been a hotbed of discontent and instability, we will appease them, I will try to give them what they want - promises"
- UKR_party_regions_request_russian: "Request Russian Invesments"
+ UKR_party_regions_request_russian: "Request Russian Investments"
  UKR_party_regions_request_russian_desc: "We will request Russian investments, they obviously will not be superfluous."
  UKR_party_regions_personal_gain: "Focus On Personal Gain"
  UKR_party_regions_personal_gain_desc: "The country is certainly good, but it's worth thinking about yourself"
- UKR_party_regions_mezhigorie: "Mezhigorie"
- UKR_party_regions_mezhigorie_desc: "As a real president, you need to have your own shelter where you can take a break from political worries and affairs"
+ UKR_party_regions_mezhyhirya: "Mezhyhirya"
+ UKR_party_regions_mezhyhirya_desc: "As a real president, you need to have your own shelter where you can take a break from political worries and affairs"
  UKR_party_regions_titushki: "Rally Out The Titushki"
  UKR_party_regions_titushki_desc: "We will use a new method of discrediting opposition rallies - Titushki."
  UKR_party_regions_regional_council: "Regional Council"
