--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -699,7 +699,7 @@
  UKR_party_regions_optimise_ministries_desc: "Government structures have become too huge, it's time to reduce them"
  UKR_party_regions_reform_constituion: "Reforming the Constitution"
  UKR_party_regions_reform_constituion_desc: "We will actively promote the reform of the constitution, it's time for our country to move towards global changes!"
- UKR_party_regions_compulsory: "Compulsory Service"
+ UKR_party_regions_compulsory: "The Change Of Compulsory Military Service"
  UKR_party_regions_compulsory_desc: "We will change the system of service in our army, literally turning it into a contract one"
  UKR_party_regions_pension_reform: "Pension Reform"
  UKR_party_regions_pension_reform_desc: "Pension reform has been brewing for a long time and now we will carry it out"
@@ -728,7 +728,7 @@
  ##########Ideas##########
  UKR_parti_regions_anti_corruption_commitie: "National Anti-Corruption Committee"
  UKR_parti_regions_anti_corruption_commitie_desc: "The new committee is designed to fight corrupt officials at all levels"
- UKR_parti_regions_economic_commitie: "Comitte of Economic Reforms"
+ UKR_parti_regions_economic_committee: "Committee of Economic Reforms"
  UKR_parti_regions_invest_open_window: "Unified Window Investments"
  UKR_parti_regions_taxx: "Reformed Tax Code"
  UKR_parti_regions_laizes: "Laisez Faire"
@@ -808,10 +808,10 @@
  ukraine_nato_help.8.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include utility trucks, MRAPs and IMVs"
  ukraine_nato_help.8.a: "Good."
  ukraine_nato_help.9.t: "[FROM.GetName] Procures APC Equipment"
- ukraine_nato_help.9.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include"
+ ukraine_nato_help.9.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include APC"
  ukraine_nato_help.9.a: "Good."
  ukraine_nato_help.10.t: "[FROM.GetName] Procures IFV Equipment"
- ukraine_nato_help.10.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include"
+ ukraine_nato_help.10.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package, produced locally for investor's money will include IFV"
  ukraine_nato_help.10.a: "Good."
  ukraine_nato_help.11.t: "[FROM.GetName] Provides Figther Planes"
  ukraine_nato_help.11.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include fighter planes"
