--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -820,10 +820,10 @@
  ukraine_nato_help.12.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include strike planes"
  ukraine_nato_help.12.a: "Good."
  ukraine_nato_help.13.t: "[FROM.GetName] Procures Artillery Equipment"
- ukraine_nato_help.13.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include self-propelled artillery and ammo"
+ ukraine_nato_help.13.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package produced locally for investor's money will include self-propelled artillery and ammo"
  ukraine_nato_help.13.a: "Good."
  ukraine_nato_help.14.t: "[FROM.GetName] Procures Tanks"
- ukraine_nato_help.14.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package will include MBTs"
+ ukraine_nato_help.14.d: "[FROM.GetName] reached out with package for our war effort.\nNext Package produced locally for investor's money will include MBTs"
  ukraine_nato_help.14.a: "Good."
 
  #### PARLIAMENT ###
@@ -833,7 +833,7 @@
  ukraine_parliament.200.d: "Pro-Wester Bloc Wins Majority of the Seats"
  ukraine_parliament.200.t: "The Pro-Western Bloc in our parliament has won the majority of the seats in our parliament, as a result of the high level of influence that the American government currently holds over Ukraine."
  ukraine_parliament.200.a: "Lets See How They Do"
- ukraine_parliament.300.t: "Pro-Ukrainian Bloc Wins the Elections!"
+ ukraine_parliament.300.t: "Pro-Ukrainian Bloc Wins Majority of the Seats"
  ukraine_parliament.300.d: "The Pro-Ukrainian Bloc in our parliament has won the majority of the seats in the recent elections, and this is due to the wavering influence of the American government, and the Russian government."
  ukraine_parliament.300.a: "Lets See How They Do"
  ukraine_parliament.400.t: "Parliamentary Elections"
@@ -859,25 +859,25 @@
  ukraine_parliament.7.t: "Parliament rejects our new military budget"
  ukraine_parliament.7.d: "The Parliament has rejected our request to increase military spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.7.a: "Unfortunate"
- ukraine_parliament.7.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.7.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.8.t: "Parliament approves our new military budget"
  ukraine_parliament.8.d: "The Parliament has approved our request to decrease military spending. This comes following our proposal that was made a few days back, and it appears that the motion gained a lot of populairty and support."
  ukraine_parliament.8.a: "Great"
  ukraine_parliament.9.t: "Parliament rejects our new military budget"
  ukraine_parliament.9.d: "The Parliament has rejected our request to decrease military spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.9.a: "Unfortunate"
- ukraine_parliament.9.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.9.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.10.t: "Parliament accepts our new policing budget"
  ukraine_parliament.10.d: "The Parliament has approved our request to increase police spending. This comes following our proposal that was made a few days back, and it appears that the motion gained a lot of populairty and support."
  ukraine_parliament.10.a: "Great"
  ukraine_parliament.11.t: "Parliament rejects our new policing budget"
  ukraine_parliament.11.d: "The Parliament has rejected our request to increase police spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.11.a: "Unfortunate"
- ukraine_parliament.11.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.11.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.14.t: "Parliament rejects our new policing budget"
  ukraine_parliament.14.d: "The Parliament has rejected our request to decrease police spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.14.a: "Unfortunate"
- ukraine_parliament.14.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.14.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.12.t: "Parliament accepts our new policing budget"
  ukraine_parliament.12.d: "The Parliament has approved our request to decrease police spending. This comes following our proposal that was made a few days back, and it appears that the motion gained a lot of populairty and support."
  ukraine_parliament.12.a: "Great"
@@ -887,42 +887,42 @@
  ukraine_parliament.16.t: "Parliament rejects our new education budget"
  ukraine_parliament.16.d: "The Parliament has rejected our request to increase police spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.16.a: "Unfortunate"
- ukraine_parliament.16.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.16.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.17.t: "Parliament accepts our new education budget"
  ukraine_parliament.17.d: "The Parliament has approved our request to decrease education spending. This comes following our proposal that was made a few days back, and it appears that the motion gained a lot of populairty and support."
  ukraine_parliament.17.a: "Great"
  ukraine_parliament.18.t: "Parliament rejects our new education budget"
  ukraine_parliament.18.d: "The Parliament has rejected our request to increase education spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.18.a: "Unfortunate"
- ukraine_parliament.18.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.18.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.19.t: "Parliament accepts our new healthcare budget"
  ukraine_parliament.19.d: "The Parliament has approved our request to increase healthcare spending. This comes following our proposal that was made a few days back, and it appears that the motion gained a lot of populairty and support."
  ukraine_parliament.19.a: "Great"
  ukraine_parliament.20.t: "Parliament rejects our new healthcare budget"
  ukraine_parliament.20.d: "The Parliament has rejected our request to increase healthcare spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.20.a: "Unfortunate"
- ukraine_parliament.20.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.20.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.21.t: "Parliament accepts our new healthcare budget"
  ukraine_parliament.21.d: "The Parliament has approved our request to decrease healthcare spending. This comes following our proposal that was made a few days back, and it appears that the motion gained a lot of populairty and support."
  ukraine_parliament.21.a: "Great"
  ukraine_parliament.22.t: "Parliament rejects our new healthcare budget"
  ukraine_parliament.22.d: "The Parliament has rejected our request to decrease healthcare spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.22.a: "Unfortunate"
- ukraine_parliament.22.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.22.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.23.t: "Parliament accepts our new pension budget"
  ukraine_parliament.23.d: "The Parliament has approved our request to increase pension spending. This comes following our proposal that was made a few days back, and it appears that the motion gained a lot of populairty and support."
  ukraine_parliament.23.a: "Great"
  ukraine_parliament.24.t: "Parliament rejects our new pension budget"
  ukraine_parliament.24.d: "The Parliament has rejected our request to increase pension spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.24.a: "Unfortunate"
- ukraine_parliament.24.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.24.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.25.t: "Parliament accepts our new pension budget"
  ukraine_parliament.25.d: "The Parliament has approved our request to decrease pension spending. This comes following our proposal that was made a few days back, and it appears that the motion gained a lot of populairty and support."
  ukraine_parliament.25.a: "Great"
  ukraine_parliament.26.t: "Parliament rejects our new pension budget"
  ukraine_parliament.26.d: "The Parliament has rejected our request to decrease pension spending. This comes following our proposal that was made a few days back, and it appears that the motion has not gained a lot of populairty and support."
  ukraine_parliament.26.a: "Unfortunate"
- ukraine_parliament.26.b: "Maybe a little bribe might change their mind.."
+ ukraine_parliament.26.b: "Perhaps a little bribing can change their mind..."
  ukraine_parliament.30.t: "Several seats in the Parliament go against our government!"
  ukraine_parliament.30.d: "Some members of the Parliament have gone against our government, leading to a decrease of our support within the assembly."
  ukraine_parliament.30.a: "It happens"
