fast fix belarus

--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -2591,14 +2591,14 @@
  BLR_belarus_kommi2_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £stability_texticon  Stability: §R-9.00%§! \n £drift_defence_texticon  Ideology drift defense: §G+15.00%§! \n\n"
  BLR_belarus_kommi3_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £western_outlook_campaign_cost_modifier_texticon Daily Pro-Western Support: §R-0.03%§! \n\n"
  BLR_belarus_kommi4_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £operatives_detection_texticon Enemy agent detection chance offset: §G+25.00%§! \n £drift_defence_texticon  Ideology drift defense: §G+5.00%§! \n\n"
- BLR_belarus_kommi5_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £research_speed_texticon  Research Speed: §G+15.00%§!  \n\n"
+ BLR_belarus_kommi5_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £research_speed_texticon  Research Speed: §G+5.00%§!  \n\n"
  BLR_belarus_kommi6_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £manpower_texticon  Recruitable Population: §G+5.00%§!  \n\n"
  BLR_belarus_kommi7_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £stability_texticon  Stability: §R-7.00%§! \n £emerging_outlook_campaign_cost_modifier_texticon Daily Emerging Support: §G+0.05%§! \n £education_cost_multiplier_modifier_texticon §YEducation Cost§! Multiplier: §R+5.00%§! \n\n"
- BLR_belarus_kommi8_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £research_speed_texticon  Research Speed: §G+10.00%§!  \n\n"
+ BLR_belarus_kommi8_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £research_speed_texticon  Research Speed: §G+5.00%§!  \n\n"
  BLR_belarus_kommi9_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £social_cost_multiplier_modifier_texticon §YSocial Spending Cost§! Multiplier: §R+5.00%§! \n £health_cost_multiplier_modifier_texticon §YHealth Cost§! Multiplier: §R+5.00%§! \n £efficiency_growth_texticon  Production Efficiency growth: §G+5.00%§! \n £construction_speed_texticon  Local Construction Speed: §G+5.00%§!\n\n"
  BLR_belarus_kommi10_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £efficiency_growth_texticon  Production Efficiency growth: §G+10.00%§! \n £construction_speed_texticon  Local Construction Speed: §G+10.00%§!\n\n"
  BLR_belarus_kommi11_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £resources_texticon  Resource Gain Efficiency: §G+5.00%§! \n\n"
- BLR_belarus_kommi12_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £consumer_goods_texticon  Tax Cost: §R-2.00%§! \n £emerging_outlook_campaign_cost_modifier_texticon Daily Emerging Support: §G+0.05%§! \n\n"
+ BLR_belarus_kommi12_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £consumer_goods_texticon  Tax Cost: §G-2.00%§! \n £emerging_outlook_campaign_cost_modifier_texticon Daily Emerging Support: §G+0.05%§! \n\n"
  BLR_belarus_kommi13_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £nationalist_outlook_campaign_cost_modifier_texticon Daily Nationalist Support: §R-0.03%§! \n\n"
  BLR_Polonez: "Polonez"
  BLR_btr60: "BTR 60"
