--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -1136,8 +1136,8 @@
  ##########Tooltips##########
  UKR_next_azov_created_tt: "New §YAzov Brigade§! will be created"
  UKR_our_influence_helps_tt: "§CBecause we influence the Parliament, we are able to pass this law with a higher likely-hood of success despite having less seats in our favor§!"
- UKR_lose_some_seats_TT: "We will §RLose§! some seats in the §HParliament§"
- UKR_gain_some_seats_TT: "We will §GGain§! some seats in the §HParliament§"
+ UKR_lose_some_seats_TT: "We will §RLose§! some seats in the §HParliament§!"
+ UKR_gain_some_seats_TT: "We will §GGain§! some seats in the §HParliament§!"
  UKR_is_pro_west_TT: "Is a Western Aligned Party"
  UKR_is_pro_east_TT: "Is a Russian Aligned Party"
  UKR_is_neutral_TT: "Is a Party Not Aligned with Any Foreign Nations"
