--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -1387,7 +1387,7 @@
  ukraine_kuchma.16.a: "Send The Police There Urgently"
  ukraine_kuchma.17.t: "The Blue Revolution"
  ukraine_kuchma.17.d: "Today, supporters of the Blue Maidan, led by Viktor Yanukovych, officially declared their independence and the formation of their own republic of Southeastern Ukraine. There are military units that have gone over to their side, as well as generals and officers."
- ukraine_kuchma.17.a: "Storm Has Begun."
+ ukraine_kuchma.17.a: "Storm Has Begun"
  ukraine_kuchma.18.t: "Protests in Galicia"
  ukraine_kuchma.18.d: "Our decision to ignore the second round of presidential elections led to instability in the country, many residents of the western regions moved to the active phase of protests, where clashes with the police began."
  ukraine_kuchma.18.a: "We Need To Be More Careful"
