--- a/localisation/english/MD_focus_TIE_l_english.yml
+++ b/localisation/english/MD_focus_TIE_l_english.yml
@@ -78,14 +78,14 @@
  TIE_rely_on_clan_elders_desc: "Rather than appointing a single figure or group to control the lives of the clan members, the judicial authority should rest on the shoulders of clan elders. For centuries they have been handling issues and matters that rise between the clans. They now our traditions best, and they are best choice for upholding them."
  TIE_continue_as_herders: "Continue As Herders"
  TIE_continue_as_herders_desc: "Our people have been herders for centuries. We should not force people change their lifestyles just to suit the government's needs."
- TIE_share_oasis: "Share Oasis"
- TIE_share_oasis_desc: "All resources are shared between the clans. We should do a survey of oasis, wells and pastures and redistribute them if we see inequality between any two clans. This will strengthen our people's belief that the clan system works."
+ TIE_share_oasis: "Share Oases"
+ TIE_share_oasis_desc: "All resources are shared between the clans. We should do a survey of oases, wells and pastures and redistribute them if we see inequality between any two clans. This will strengthen our people's belief that the clan system works."
  TIE_use_azza_to_industrialise: "Use The Azza To Industrialise"
  TIE_use_azza_to_industrialise_desc: "The Toubou society is socially stratified into a caste system. The people who work instead of owning land and herding are called the Azza. These people do artisanal work, mining, metal work and tailoring, and have traditionally been despised and segregated by the higher caste of 'freemen' of the Toubou society. We should not despise these people, but instead use them to create actual industry for the Toubou people."
  TIE_adopt_cfa_franc: "Adopt CFA Franc"
  TIE_adopt_cfa_franc_desc: "The CFA Franc is a currently widely in use in Western and Central Africa. This currency is heavily tied to France, but it would offer a great boost to our economy."
  TIE_diversify_our_economy: "Diversify Our Economy"
- TIE_diversify_our_economy_desc: "While tending to cattle and rising dates give a peaceful life, it is not a very good way to make money. We need to find other sources of income for our government."
+ TIE_diversify_our_economy_desc: "While tending to cattle and raising dates give a peaceful life, it is not a very good way to make money. We need to find other sources of income for our government."
  TIE_mine_natron: "Mine Natron"
  TIE_mine_natron_desc: "Natron is a salt like substance found in old dried up lakes. It used to be used as an ingredient in soap, mouthwash, toothpaste, antiseptics, insecticide and in leather making. However, in modern times it has been replaced mostly by soda ash in almost all applications. Our people still mine it and use it for their own domestic goods. We should increase this mining to reduce our reliance on foreign imports for soda ash."
  TIE_survey_for_gold: "Survey For Gold"
